<resources>
    <string name="app_name">ป้ายจราจรน่ารู้</string>
    <string name="my_name">นายคณิติน แซ่เตียว</string>
    <string name="my_major">หลักสูตรวิทยาการคอมพิวเตอร์ คณะวิทยาศาสตร์และเทคโนโลยี</string>
    <string name="my_university">มหาวิทยลัยสวนดุสิต</string>
    <string name="my_mobile">Mobile N0 : 0970985987</string>
    <string name="my_facebook">facebook : https://www.facebook.com/Karter.kanitin</string>
</resources>
